add gnupg to brew packages

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -42,6 +42,7 @@ brew 'lsd'
 brew 'jq'
 brew 'wget'
 brew 'gh'
+brew 'gnupg'
 
 cask "docker" unless File.directory?('/Applications/Docker.app')
 cask "1password-cli"
