add lazy.nvim w/treesitter plugin and default tool-versions

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -43,6 +43,7 @@ brew 'jq'
 brew 'wget'
 brew 'gh'
 brew 'gnupg'
+brew 'font-hack-nerd-font'
 
 cask "docker" unless File.directory?('/Applications/Docker.app')
 cask "1password-cli"
