add gitcommit to treesitter parsers and set nvim as core.editor in gitconfig

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -142,7 +142,7 @@ cat > ~/.gitconfig <<EOL
         name = George Shaw
         signingkey = ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILaE/s5mLGFJ+eOzQV0d2VibHcYC9LC1ARnbCibne59q
 [core]
-        editor = vim
+        editor = nvim
 [gpg]
         format = ssh
 [gpg "ssh"]
